--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "./index.js",
+        "src": "./index.",
         "use": "@vercel/node"
       }
     ],
@@ -13,3 +13,5 @@
       }
     ]
 }
+
+//index.js changed
